--- a/vue-vuex-jwt-auth/package.json
+++ b/vue-vuex-jwt-auth/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.7.1",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
     "lingallery": "^1.3.7",
@@ -21,6 +22,7 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-bootstrap-pagination": "^2.10.3",
+    "vue-chartkick": "^0.6.1",
     "vue-router": "^3.0.3",
     "vue-select": "^3.16.0",
     "vuex": "^3.0.1"
